source/objects/Products_for_Demo__c/Products_for_Demo__c.object-meta.xml
<CustomObject>
    <label>Products for Demo</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Products for Demo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products for Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>