source/objects/Products_for_Demo__c/fields/Bluescape_Demo__c.field-meta.xml
<CustomField>
    <fullName>Bluescape_Demo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bluescape Demo</label>
    <referenceTo>Bluescape_Demo__c</referenceTo>
    <relationshipLabel>Products for Demos</relationshipLabel>
    <relationshipName>Products_for_Demos</relationshipName>
    <type>Lookup</type>
</CustomField>