source/objects/Products_for_Demo__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products for Demos</relationshipLabel>
    <relationshipName>Products_for_Demos</relationshipName>
    <type>Lookup</type>
</CustomField>